--- a/res/gamma.css
+++ b/res/gamma.css
@@ -23,7 +23,7 @@ body
     background-color: white;
 }
 
-#previewarea
+#paletteform
 {
     display: inline-block;
     max-width: 90%;
@@ -32,7 +32,7 @@ body
     color: white;
 }
 
-#preview
+#palettepreview
 {
     margin: 8px;
     border: 3px solid black;
@@ -41,4 +41,19 @@ body
     color: black;
     font-weight: bold;
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+
+input[type=number]
+{ 
+  -moz-appearance: textfield;
+  appearance: textfield;
+  margin: 0; 
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button
+{
+      -webkit-appearance: none; 
+      margin: 0; 
 }
