--- a/res/gamma.css
+++ b/res/gamma.css
@@ -43,6 +43,11 @@ body
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
+.warning
+{
+    color: red;
+}
+
 
 input[type=number]
 { 
